fix post detail width on mobile

--- a/app/routes/__main/news/$post/index.module.css
+++ b/app/routes/__main/news/$post/index.module.css
@@ -25,3 +25,9 @@
   font-weight: var(--font-weight-semi-bold);
   font: var(--font-big);
 }
+@media screen and (max-width: 768px) {
+  .container {
+    max-width: 100%;
+    padding-inline: 3vw;
+  }
+}
